chore: remove version from ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
               uses: kdheepak/panvimdoc@main
               with:
                   vimdoc: ${{ github.event.repository.name }}
-                  version: "Neovim >= 0.10.0"
+                  version: "Neovim"
                   pandoc: "README.md"
                   demojify: true
                   treesitter: true
