--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,19 @@ jobs:
             - name: Create /doc
               run: mkdir -p doc
 
-            - name: panvimdoc
-              uses: kdheepak/panvimdoc@main
+            - name: Install Rust
+              uses: dtolnay/rust-toolchain@master
               with:
-                  vimdoc: ${{ github.event.repository.name }}
-                  version: "Neovim"
-                  pandoc: "README.md"
-                  demojify: true
-                  treesitter: true
+                  toolchain: stable
+
+            - name: Install vimcats
+              run: cargo install vimcats --features=cli
+
+            - name: Install Just
+              uses: extractions/setup-just@v3
+
+            - name: Generate docs
+              run: just doc
 
             - name: Push changes
               uses: stefanzweifel/git-auto-commit-action@v5
